# deepSSF_package

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Package_generation_process.md  README.md  deepSSF_train_validate_s2.ipynb  environment.yml  pyproject.toml  styles.css
.github/workflows/: ci.yml  publish.yml
examples/: deepssf_train_validate_example.html  deepssf_train_validate_example.ipynb  references.bib
src/deepssf/: __init__.py  data.py  model.py  simulate.py  train.py  utils.py  validate.py
src/deepssf/datasets/data/: buffalo_djelk_id2005.csv  ndvi_2005.tif  slope_2005.tif
tests/: test_deepssf.py  test_smoke.py
