# =============================================================================
# pyproject.toml — the single source of truth for your package.
# This one file replaces the old setup.py + setup.cfg + requirements.txt trio.
# =============================================================================

# --- How your package gets built into something pip can install ---------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Project metadata (this is what shows up on PyPI) -------------------------
[project]
name = "deepSSF"
dynamic = ["version"]          # version is read from src/deepssf/__init__.py (see below)
description = "Deep learning step selection functions for predicting animal movement."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"                # <-- VERIFY this with your co-authors / journal
license-files = ["LICENSE"]
authors = [
    { name = "Scott Forrest", email = "scottwforrest@gmail.com" }
]
keywords = ["ecology", "animal-movement", "deep-learning", "step-selection", "ssf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# --- Runtime dependencies: what gets installed alongside your package ---------
# Keep this list HONEST and MINIMAL — only what the importable code actually
# needs. Prune/extend once you drop your functions in.
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "rasterio>=1.3",
    "imageio>=2.28",        # create_gif in deepssf.utils
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    # Optional — uncomment when needed:
    # "geopandas>=0.14",
    # "xarray>=2024.1",
]

# --- Optional dependencies: installed only when asked for ---------------------
# `pip install -e ".[dev]"` gives you the development toolchain.
# `pip install -e ".[examples]"` adds Jupyter for running the example notebooks.
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "build>=1.2",     # builds the distributable files
    "twine>=5.0",     # uploads them to PyPI
]
examples = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[project.urls]
Homepage = "https://swforrest.github.io/deepSSF/"
Repository = "https://github.com/swforrest/deepssf"
Paper = "https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.70136"   # link to the MEE paper

# --- Where the version number lives (single source of truth) ------------------
[tool.hatch.version]
path = "src/deepssf/__init__.py"

# --- Tell the builder your code lives under src/ ------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/deepssf"]

# =============================================================================
# Tooling config — lives here so you don't need extra dotfiles.
# =============================================================================

# Ruff: an extremely fast linter + formatter (replaces black, isort, flake8).
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # errors, pyflakes, import-sort, pyupgrade, bugbear

# Pytest: where the tests live.
[tool.pytest.ini_options]
testpaths = ["tests"]
